--- a/Disj-CC.tex
+++ b/Disj-CC.tex
@@ -21,7 +21,7 @@
 \usepackage{float}
 \usepackage[colorlinks,urlcolor=black,citecolor=black,linkcolor=black]{hyperref}
 
-\title{Disjointness CC}
+\title{Multiparty Disjointness on Product Distributions}
 \author{Peleg Kazaz}
 \date{August 2019}
 
@@ -152,9 +152,9 @@ In this case we have $n^{1-\frac{1}{k}}$ rounds where each one costs $k\log(k)$ 
 \end{proof}
 
 \subsection{TODO}
-What if m=0? \newline
+Add an universe set U. and pseudo code. 
 Tough (est?) distribution\newline
 Make sure to rethink how does this protocol end \newline
 Does it help to permutate the players? \newline
-Do we have to tell every player everything? maybe we can get rid of the k factor? \newline
+Do we have to tell every player everything? maybe we can get rid of the k factor? I need to ask which one of them may have a critical index... \newline
 \end{document}
